--- a/front/src/HarryStyles/NavBar.css
+++ b/front/src/HarryStyles/NavBar.css
@@ -5,22 +5,22 @@
     position: fixed;
     top: 0;
     left: 0;
-    overflow-x: hidden;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding: 0 5px
+    padding: 0 5px;
+    z-index: 1000;
 }
 .navbar-items {
-    list-style-type: none; /* Quitar los puntos de las listas */
+    list-style-type: none; 
     margin: 0;
     padding: 0;
-    display: flex; /* Usar flexbox para alinear los ítems */
-    justify-content: flex-end; /* Alinear los ítems a la derecha */
+    display: flex; 
+    justify-content: flex-end; 
 }
 
 .navbar-items li {
-    display: inline; /* Asegurarse de que los ítems sean inline */
+    display: inline; 
 }
 
 .botonNavBar{
@@ -49,3 +49,40 @@
     margin-bottom: 20px;
     padding: 14px 20px;
 }
+
+/* NavBar.css */
+.dropdown-menu {
+    position: absolute;
+    top: calc(100% + 5px); /* Colocamos el menú justo debajo del botón "Menú" */
+    right: 0; /* Alineamos el menú a la derecha */
+    background-color: white;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+    z-index: 1000;
+    display: none; /* Ocultamos inicialmente el menú */
+    max-height: 50vh; /* Limitamos la altura máxima del menú */
+    overflow-y: auto; /* Agregamos desplazamiento vertical si el contenido es demasiado largo */
+}
+
+.dropdown-menu.show {
+    display: block; /* Mostramos el menú cuando está abierto */
+}
+
+.dropdown-menu ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.dropdown-menu ul li {
+    padding: 10px;
+    text-align: right; /* Alineamos el texto a la derecha */
+    display: block; /* Hacemos que cada elemento sea un bloque para que aparezcan uno debajo del otro */
+    width: 100%; /* Aseguramos que ocupen todo el ancho del menú */
+}
+
+.dropdown-menu ul li:hover {
+    background-color: #f5f5f5;
+}
+
