--- a/front/src/HarryStyles/Publicaciones.css
+++ b/front/src/HarryStyles/Publicaciones.css
@@ -18,20 +18,19 @@
 /* Publicaciones.css */
 
 .publi-container {
-    flex: 1;
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 300px)); /* Columnas dinámicas */
-    gap: 50px; /* Espacio entre las publicaciones */
-    padding: 20px;
-    max-height: 60vh; /* Altura máxima */
-    overflow-y: auto; /* Desplazamiento vertical si es necesario */
-  }
-  
-    
+  flex: 1;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(400px, 1fr)); /* Columnas dinámicas */
+  gap: 50px; /* Espacio entre las publicaciones */
+  padding: 20px;
+  max-height: 350px; /* Altura máxima */
+  overflow-y: auto; /* Desplazamiento vertical si es necesario */
+}
+
   
   
   .publicacion {
-    width: 300px; /* Ancho fijo para cada publicación */
+    width: 400px; /* Ancho fijo para cada publicación */
     background-color: #ffffff;
     border: 1px solid #ddd;
     border-radius: 8px;
@@ -50,17 +49,15 @@
 
  .publicacion-img {
     flex: 1;
-    max-height: 150px;
-    max-width: 150px;
-    height: 150px;
-    width: auto; /* Altura fija para todas las imágenes */
+    height: 300px;
+    width: 300px; /* Altura fija para todas las imágenes */
     overflow: hidden; /* Oculta cualquier parte de la imagen que exceda la altura fija */
   }
   
   .publicacion-img img {
-    width: 150px; /* La imagen ocupará todo el ancho del contenedor */
-    height: 150px; /* La imagen ocupará toda la altura del contenedor */
-    object-fit: cover; /* La imagen se ajustará para cubrir el contenedor manteniendo su relación de aspecto */
+    width: 300px; /* La imagen ocupará todo el ancho del contenedor */
+    height: 300px; /* La imagen ocupará toda la altura del contenedor */
+    object-fit: contain; /* La imagen se ajustará para cubrir el contenedor manteniendo su relación de aspecto */
   }
   
   
@@ -111,4 +108,18 @@
     height: 100px;
     background-color: #f0f0f0;
   }
-  
+  .detalle-button {
+  display: inline-block;
+  padding: 10px 20px;
+  font-size: 16px;
+  color: #fff;
+  background-color: #007bff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.detalle-button:hover {
+  background-color: #0056b3;
+}
