--- a/front/src/HarryStyles/NavBar.css
+++ b/front/src/HarryStyles/NavBar.css
@@ -10,6 +10,7 @@
     justify-content: center;
     align-items: center; /* Centra horizontalmente */
     padding: 0 5px;
+    z-index: 1000;
   }
   
   .navbar-items {
