--- a/front/src/HarryStyles/Intercambios.css
+++ b/front/src/HarryStyles/Intercambios.css
@@ -39,3 +39,43 @@
     width: 16px;
     height: 16px;
 }
+.content {
+    display: flex;
+  }
+  
+  .sidebar {
+    width: 20%;
+    padding: 10px;
+  }
+  
+  .publi-container {
+    width: 80%;
+    padding: 10px;
+  }
+  
+  .cargando, .sin-publi {
+    text-align: center;
+  }
+  
+  .intercambio-list {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+  }
+  
+  .intercambio-item {
+    border: 1px solid #ddd;
+    padding: 10px;
+    margin-bottom: 10px;
+    background-color: #f9f9f9;
+    border-radius: 5px;
+  }
+  
+  .intercambio-content p {
+    margin: 5px 0;
+  }
+  
+  .intercambio-content strong {
+    font-weight: bold;
+  }
+  
